# catcad

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  readme.md  项目计划书.md
configs/: default.yaml
docs/: phase1_env.md
kicad_plugin/: AutoRouteAction.py
scripts/: demo_env.py  human_viewer.py  package_plugin.sh
src/auto_router/: __init__.py
src/auto_router/algos/: __init__.py
src/auto_router/common/: __init__.py  config.py
src/auto_router/env/: __init__.py  pcb_route_env.py  snake_route_env.py
src/auto_router/heuristics/: __init__.py
tests/: conftest.py  test_pcb_route_env_reset.py  test_snake_env.py
